<resources>
    <string name="app_name">Elpop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="what_do_yo_want">What do you want</string>
    <string name="all">All</string>
    <string name="clothing">Clothing</string>
    <string name="footwear">Footwear</string>
    <string name="Acc">Acc</string>
    <string name="confirm">Confirm</string>
    <string name="available">Available:</string>
    <string name="price">Price:</string>
    <string name="total">total:</string>
    <string name="your_cart">your cart</string>
    <string name="your_history">Your history</string>
    <string name="receipt_id">Receipt Id:</string>
    <string name="receipt_price">Receipt Price:</string>
    <string name="item_name">Item name:</string>
    <string name="item_price">Item price:</string>
    <string name="receipt_date">Receipt Date:</string>
    <string name="item_quantity">Item Quantity:</string>
    <string name="total_price">Total Price:</string>
    <string name="item_info">Item Info</string>
    <string name="foot">foot</string>
    <string name="accessories">Accessories</string>
    <string name="clothes">Clothes</string>
    <string name="please_select_type">please select type</string>
    <string name="please_fill_all_data">please fill all data</string>
    <string name="history_info">history Info</string>
    <string name="add_new_item">Add new Item</string>
    <string name="add_new_person">Add new person</string>
    <string name="salary">salary</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="person_info">Person Info</string>
    <string name="Phone">Phone:</string>
    <string name="Salary">Salary:</string>
    <string name="Rest">Rest:</string>
    <string name="take">take</string>
    <string name="reports">Reports</string>
    <string name="importText">import</string>
    <string name="outgoing">outgoing</string>
    <string name="incom">incoming</string>
    <string name="edit_histoty">Edit Histoty</string>
    <string name="add_new_report">Add new Report</string>
    <string name="all_persons">All Persons</string>
    <string name="enter_receipt_id">enter receipt id</string>
</resources>