<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.userhome.AddClotheFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@drawable/bar_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/add_new_report"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_check_24" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_200sdp"
                android:layout_weight="1"
                android:src="@drawable/ic_addrepot" />


            <EditText
                android:id="@+id/name"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_baseline_type_specimen_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/price"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:hint="@string/price"
                android:inputType="number"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/_50sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <RadioButton
                        android:id="@+id/importId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incom"
                        android:textColor="@color/light_blue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="534dp" />

                    <RadioButton
                        android:id="@+id/exportId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/outgoing"
                        android:textColor="@color/light_blue"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteY="536dp" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>