<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.userhome.AddClotheFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@drawable/bar_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/add_new_person"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/addn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_check_24" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_addperson" />


            <EditText
                android:id="@+id/name"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/phone"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:hint="@string/phone"
                android:inputType="number"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />


            <EditText
                android:id="@+id/salary"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:hint="@string/salary"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_80sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="number"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>