<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/back_shape"
        android:layout_margin="@dimen/_10sdp"
        >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/historyId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold|italic"
                            android:text="@string/item_name"
                            android:textSize="@dimen/_15sdp" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="italic"
                            android:enabled="false"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/historyTotla"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/item_price"
                            android:textColor="@color/light_blue"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold|italic" />

                        <EditText
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="italic"
                            android:enabled="false"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold|italic"
                            android:text="@string/item_quantity"
                            android:textSize="@dimen/_15sdp" />

                        <EditText
                            android:id="@+id/quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="italic"
                            android:enabled="false"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold|italic"
                            android:text="@string/total_price"
                            android:textSize="@dimen/_15sdp" />

                        <EditText
                            android:id="@+id/total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_blue"
                            android:textStyle="italic"
                            android:enabled="false"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>

                </LinearLayout>
        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24b"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>