<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vie"
            type="com.example.elpop.ui.home.cart.CartViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bar_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/ic_baseline_arrow_back_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/your_cart"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp" />
        <ImageView
            android:id="@+id/addToHistoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_add_24"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_RC"
            cartListData="@{vie.allCart}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/_80sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/subod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:listitem="@layout/cart_item_card" />

        <LinearLayout
            android:id="@+id/subod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bar_shape"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="50 egp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />
            </LinearLayout>

            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/button_shape5"
                android:text="@string/confirm"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/_15sdp"
                app:backgroundTint="@null" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

